--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -2,6 +2,8 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  min-width: 960px;
+  overflow-y: auto !important;
 }
 body {
   margin: 0;
